--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": "^7",
         "ext-pdo": "*",
+        "guzzlehttp/guzzle": "^6",
         "paragonie/blakechain": "^0|^1",
         "paragonie/easydb": "^2",
         "paragonie/sapient": "^1",
