--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "keywords": ["sapient", "blakechain", "hash-chain", "security", "hash", "BLAKE2", "BLAKE2b"],
     "homepage": "http://github.com/paragonie/chronicle",
     "license": "MIT",
+    "type": "project",
     "authors": [
         {
             "name": "Paragon Initiative Enterprises",
@@ -22,7 +23,8 @@
         "slim/slim": "^3.8",
         "slim/php-view": "^2.0",
         "tflori/getopt-php": "^2",
-        "monolog/monolog": "^1.17"
+        "monolog/monolog": "^1.17",
+        "roave/security-advisories": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^6",
