--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6",
-        "vimeo/psalm": "dev-master"
+        "vimeo/psalm": "^0.3"
     },
     "autoload-dev": {
         "psr-4": {
