--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ matrix:
   include:
     - php: "7.0"
     - php: "7.1"
+    - php: "7.2"
     - php: "nightly"
   allow_failures:
     - php: "nightly"
