--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6",
-        "vimeo/psalm": "^0.3"
+        "vimeo/psalm": "^0"
     },
     "autoload-dev": {
         "psr-4": {
@@ -37,7 +37,7 @@
         }
     },
 	"scripts": {
-        "start": "php -S 0.0.0.0:8080 -t public public/index.php",
+        "start": "php -S 0.0.0.0:8080 -t public index.php",
         "static-analysis": "psalm",
         "test": "phpunit"
 	}
