--- a/composer.json
+++ b/composer.json
@@ -14,21 +14,23 @@
     ],
     "require": {
         "php": "^7",
+        "ext-json": "*",
         "ext-pdo": "*",
         "guzzlehttp/guzzle": "^6",
         "paragonie/blakechain": "^1",
         "paragonie/easydb": "^2",
         "paragonie/sapient": "^1",
         "paragonie/slim-sapient": "^1",
+        "paragonie/sodium_compat": "^1.7",
         "slim/slim": "^3.8",
         "slim/php-view": "^2.0",
-        "tflori/getopt-php": "^2",
+        "ulrichsg/getopt-php": "^3",
         "monolog/monolog": "^1.17",
         "roave/security-advisories": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^6",
-        "vimeo/psalm": "^0"
+        "vimeo/psalm": "^2"
     },
     "autoload-dev": {
         "psr-4": {
