--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         }
     },
 	"scripts": {
-        "start": "php -S 0.0.0.0:8080 -t public index.php",
+        "start": "php -S 0.0.0.0:8080 -t public public/index.php",
         "static-analysis": "psalm",
         "test": "phpunit"
 	}
