Future Genesis blocks will have a NULL prevhash, thereby allowing UNIQUE FOREIGN KEY constraints to be created on prevhash pointing to a previous row's currahsh.

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,9 @@
             "Tests\\": "tests/"
         }
     },
+    "config": {
+        "process-timeout": 0
+    },
 	"scripts": {
         "start": "php -S 0.0.0.0:8080 -t public public/index.php",
         "static-analysis": "psalm",
