Optional feature: Cache responses for a very short period of time.
This will allow us to serve a lot more requests per second.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "php": "^7",
         "ext-json": "*",
         "ext-pdo": "*",
+        "cache/memcached-adapter": "^1",
         "guzzlehttp/guzzle": "^6",
         "paragonie/blakechain": ">= 1.0.2",
         "paragonie/easydb": "^2.7",
