--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php": "^7",
+        "php": "^7.1|^8",
         "ext-json": "*",
         "ext-pdo": "*",
         "cache/memcached-adapter": "^1",
@@ -30,8 +30,8 @@
         "roave/security-advisories": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6|^7",
-        "vimeo/psalm": "^2"
+        "phpunit/phpunit": "^7|^8|^9",
+        "vimeo/psalm": "^2|^3|^4"
     },
     "autoload-dev": {
         "psr-4": {
